# backend/src/main/java/com/digiledger/backend/model/dto/asset/AssetDetailDTO.java
@@ -17,6 +17,7 @@ public record AssetDetailDTO(
         BrandDTO brand,
         String model,
         String serialNo,
+        String specifications,
         String status,
         LocalDate purchaseDate,
         LocalDate retiredDate,
